--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,6 +7,10 @@
     "defaultMessage": "Email",
     "description": "Email Button Title"
   },
+  "+fv9wl": {
+    "defaultMessage": "State",
+    "description": "State"
+  },
   "+g4yFF": {
     "defaultMessage": "Logout",
     "description": "more menu button"
@@ -14,6 +18,10 @@
   "+lsuwj": {
     "defaultMessage": "Try now",
     "description": "Continue Playing button"
+  },
+  "+nn/tN": {
+    "defaultMessage": "Save & Exit",
+    "description": "save button"
   },
   "/+d/C7": {
     "defaultMessage": "XP",
@@ -38,6 +46,10 @@
   "/itreP": {
     "defaultMessage": "{label}",
     "description": "help type label"
+  },
+  "/jLYDx": {
+    "defaultMessage": "Next",
+    "description": "Next btn"
   },
   "/ndV7b": {
     "defaultMessage": "Coins Earned:",
@@ -122,9 +134,21 @@
     "defaultMessage": "rank",
     "description": "rank"
   },
+  "2vujhq": {
+    "defaultMessage": "All set!",
+    "description": "club created"
+  },
   "2yf2WH": {
     "defaultMessage": "Login with Phone",
     "description": "Login with Phone tab"
+  },
+  "36JfZ4": {
+    "defaultMessage": "Club Info",
+    "description": "Club Info modal title"
+  },
+  "3Aneol": {
+    "defaultMessage": "State",
+    "description": "state label"
   },
   "3NDGt2": {
     "defaultMessage": "#{rank}",
@@ -138,9 +162,17 @@
     "defaultMessage": "{label}",
     "description": "{description}"
   },
+  "44ks1Q": {
+    "defaultMessage": "Delete Club",
+    "description": "Delete club button label"
+  },
   "47yCiv": {
     "defaultMessage": "#{rank}",
     "description": "club rank"
+  },
+  "4Pt6v5": {
+    "defaultMessage": "Searching...",
+    "description": "Autocomplete searching text"
   },
   "4Ve1r3": {
     "defaultMessage": "Ok",
@@ -281,6 +313,10 @@
     "defaultMessage": "Top Members",
     "description": "Top Members"
   },
+  "CPWw9k": {
+    "defaultMessage": "Previous",
+    "description": "Previous btn"
+  },
   "CabaPs": {
     "defaultMessage": "Level {level}",
     "description": "Level 1 navigation link"
@@ -288,6 +324,10 @@
   "CcB4fo": {
     "defaultMessage": "Coins Earned:",
     "description": "Coins Earned"
+  },
+  "CddI5u": {
+    "defaultMessage": "Join Club",
+    "description": "join club modal title"
   },
   "CfsqV9": {
     "defaultMessage": "All Games",
@@ -316,6 +356,10 @@
   "DuPnGd": {
     "defaultMessage": "Email",
     "description": "Email label"
+  },
+  "ESmwpN": {
+    "defaultMessage": "{label}",
+    "description": "Autocomplete label"
   },
   "EhuHU0": {
     "defaultMessage": "{errorMessage}",
@@ -408,13 +452,28 @@
     "defaultMessage": "OTP",
     "description": "OTP label"
   },
+  "Jrt9bn": {
+    "defaultMessage": "{countryName}"
+  },
   "KD6lRu": {
     "defaultMessage": "Continue",
     "description": "Continue button"
   },
+  "KoP+2C": {
+    "defaultMessage": "Only admins can delete club",
+    "description": "Only admins can delete club"
+  },
+  "KvJ4NM": {
+    "defaultMessage": "Save & Proceed",
+    "description": "save button"
+  },
   "LCt8qV": {
     "defaultMessage": "Share",
     "description": "Share Button"
+  },
+  "LkuPrA": {
+    "defaultMessage": "Join your friends in the club",
+    "description": "more card subtitle"
   },
   "MB8h2I": {
     "defaultMessage": "Leaderboard Ranking",
@@ -431,6 +490,10 @@
   "MfoF60": {
     "defaultMessage": "{hint}",
     "description": "Hint"
+  },
+  "N3+S9p": {
+    "defaultMessage": "Members",
+    "description": "Members label"
   },
   "N930gg": {
     "defaultMessage": "{message}",
@@ -460,6 +523,10 @@
     "defaultMessage": "Go to login",
     "description": "Go to login button"
   },
+  "NzfjXA": {
+    "defaultMessage": "Country",
+    "description": "country label"
+  },
   "O1sXEv": {
     "defaultMessage": "Collections",
     "description": "collectibles modal title"
@@ -480,6 +547,10 @@
     "defaultMessage": "Class",
     "description": "class nav text"
   },
+  "Ow+Yo9": {
+    "defaultMessage": "Or share this link to invite someone",
+    "description": "Invite link input label"
+  },
   "PKwyq8": {
     "defaultMessage": "Move any blocks to get hints",
     "description": "Hint message"
@@ -495,6 +566,10 @@
   "PcqGYQ": {
     "defaultMessage": "Playground",
     "description": "Playground tab"
+  },
+  "PpUsRs": {
+    "defaultMessage": "Join",
+    "description": "join button"
   },
   "Px7S/2": {
     "defaultMessage": "Close",
@@ -556,9 +631,17 @@
     "defaultMessage": "Edit Profile",
     "description": "edit profile"
   },
+  "Tw0cSl": {
+    "defaultMessage": "Create Club",
+    "description": "create club button"
+  },
   "TyfKd4": {
     "defaultMessage": "Learn to code while drawing, and code along to see the output right on your screens. Everyone draws to express themselves the best! Why not channelize that to learn?",
     "description": "Turtle description"
+  },
+  "U0dXhe": {
+    "defaultMessage": "Invites",
+    "description": "invites tab"
   },
   "U3AyDz": {
     "defaultMessage": "Register to save your progess and compete with others",
@@ -632,6 +715,10 @@
     "defaultMessage": "Play",
     "description": "Play button"
   },
+  "WxUiy6": {
+    "defaultMessage": "State",
+    "description": "State label"
+  },
   "X1rCRf": {
     "defaultMessage": "Login into existing account",
     "description": "login into existing account button"
@@ -652,6 +739,10 @@
     "defaultMessage": "{username}",
     "description": "Username"
   },
+  "YqYdcI": {
+    "defaultMessage": "Only admins can accept invites",
+    "description": "Admin warning"
+  },
   "YxMMzC": {
     "defaultMessage": "All Games",
     "description": "Game Progress card menu"
@@ -659,6 +750,10 @@
   "Yz1BIF": {
     "defaultMessage": "Go to About",
     "description": "Link description"
+  },
+  "ZG77Sq": {
+    "defaultMessage": "close",
+    "description": "close button"
   },
   "ZXYzUQ": {
     "defaultMessage": "Something went wrong. Please try again",
@@ -692,6 +787,10 @@
     "defaultMessage": "Home",
     "description": "Home navigation link"
   },
+  "bCvHuI": {
+    "defaultMessage": "Invites",
+    "description": "Invites"
+  },
   "bK9TWX": {
     "defaultMessage": "Leaderboard Rank",
     "description": "leaderboard rank heading"
@@ -707,6 +806,10 @@
     "defaultMessage": "Play next",
     "description": "Play next button"
   },
+  "cS+r14": {
+    "defaultMessage": "Basic Info",
+    "description": "Basic Info tab title"
+  },
   "cZDBd3": {
     "defaultMessage": "Coins",
     "description": "Coins cell header"
@@ -714,6 +817,10 @@
   "croLiZ": {
     "defaultMessage": "{name}",
     "description": "name"
+  },
+  "dBwIzQ": {
+    "defaultMessage": "Country",
+    "description": "Country label"
   },
   "dNWhFj": {
     "defaultMessage": "No",
@@ -746,6 +853,10 @@
     "defaultMessage": "Club Rank",
     "description": "Club Rank"
   },
+  "feq+Va": {
+    "defaultMessage": "More friends = More fun",
+    "description": "more card title"
+  },
   "fr893W": {
     "defaultMessage": "{validSubmissions}",
     "description": "Valid Submissions"
@@ -762,13 +873,16 @@
     "defaultMessage": "Coins",
     "description": "Coins"
   },
-  "gFogim": {
-    "defaultMessage": "{state}",
-    "description": "state"
+  "gCfRUT": {
+    "defaultMessage": "{stateName}"
   },
   "gOkIvb": {
     "defaultMessage": "Name",
     "description": "Name label"
+  },
+  "gTCzny": {
+    "defaultMessage": "Profile Picture",
+    "description": "Profile Picture label"
   },
   "gYpthg": {
     "defaultMessage": "More",
@@ -794,6 +908,14 @@
     "defaultMessage": "Continue",
     "description": "Turtle Continue Button"
   },
+  "iS2zLU": {
+    "defaultMessage": "Visit Club",
+    "description": "more card button"
+  },
+  "jACivV": {
+    "defaultMessage": "{name}",
+    "description": "user name"
+  },
   "jDzDCp": {
     "defaultMessage": "Leaderboard",
     "description": "Leaderboard page title"
@@ -806,6 +928,10 @@
     "defaultMessage": "Ok",
     "description": "closing modal button"
   },
+  "kloO3Z": {
+    "defaultMessage": "Advanced Options",
+    "description": "Advanced Options tab title"
+  },
   "lKeCea": {
     "defaultMessage": "Save & Exit",
     "description": "Profile save button"
@@ -813,6 +939,10 @@
   "lPt9wn": {
     "defaultMessage": "{question}",
     "description": "Question"
+  },
+  "loHqWK": {
+    "defaultMessage": "Invite Members with this link (Optional)",
+    "description": "club link input field"
   },
   "lynO1X": {
     "defaultMessage": "Change Password",
@@ -841,6 +971,10 @@
   "mfZLuH": {
     "defaultMessage": "#{rank}",
     "description": "rank"
+  },
+  "mijv0V": {
+    "defaultMessage": "Leave Club",
+    "description": "Leave club button label"
   },
   "mm9QaY": {
     "defaultMessage": "School",
@@ -882,9 +1016,17 @@
     "defaultMessage": "Coming Soon...",
     "description": "Class Page"
   },
+  "oQwd5t": {
+    "defaultMessage": "Create Club",
+    "description": "Create club modal title"
+  },
   "pEiO08": {
     "defaultMessage": "Account Settings",
     "description": "account settings CTA"
+  },
+  "pHE0Mj": {
+    "defaultMessage": "Join with link",
+    "description": "join tab"
   },
   "pVIk7O": {
     "defaultMessage": "Turtle",
@@ -905,6 +1047,10 @@
   "qXTiEd": {
     "defaultMessage": "Grade"
   },
+  "qYZ5gD": {
+    "defaultMessage": "{memberName}",
+    "description": "member name"
+  },
   "qZyJyg": {
     "defaultMessage": "#{rank} rank",
     "description": "club rank"
@@ -912,6 +1058,10 @@
   "quRCCv": {
     "defaultMessage": "Phone",
     "description": "Phone label"
+  },
+  "r3BGOH": {
+    "defaultMessage": "Club Name",
+    "description": "club name label"
   },
   "rECW1h": {
     "defaultMessage": "completed",
@@ -941,9 +1091,17 @@
     "defaultMessage": "{step}",
     "description": "turtle instruction"
   },
+  "tevLEq": {
+    "defaultMessage": "Choose a club display image",
+    "description": "club image label"
+  },
   "tsF0aG": {
     "defaultMessage": "Continue Playing",
     "description": "continue playing"
+  },
+  "uCGdYb": {
+    "defaultMessage": "Club Name",
+    "description": "Club Name"
   },
   "uGb/uS": {
     "defaultMessage": "{message}",
@@ -1017,6 +1175,14 @@
     "defaultMessage": "Your Collections and Perks",
     "description": "more menu button"
   },
+  "z/0c45": {
+    "defaultMessage": "Link",
+    "description": "description"
+  },
+  "z3XXBW": {
+    "defaultMessage": "Country",
+    "description": "Country"
+  },
   "z9lFwl": {
     "defaultMessage": "Name",
     "description": "Profile name label"
@@ -1032,9 +1198,5 @@
   "zROcjU": {
     "defaultMessage": "Coming soon",
     "description": "More card button text"
-  },
-  "zqaCs9": {
-    "defaultMessage": "{country}",
-    "description": "country"
   }
 }
